@@ -2,5 +2,5 @@ loadPropertyIntoExtra(
     extraKey = "buildNumber",
     projectPropertyKey = "buildNumber",
     systemPropertyKey = "BUILD_NUMBER",
-    defaultValue = "1"
+    defaultValue = "2"
 )
