@@ -166,8 +166,7 @@ media3 = [
     "media3-exoplayer",
     "media3-session",
     "media3-ui",
-    "media3-common",
-    "media3-cast"
+    "media3-common"
 ]
 
 arrow = [
