@@ -1,0 +1,8 @@
+package gizz.tapes
+
+import javax.inject.Inject
+
+/** Foss Release specific initialization things. */
+class FossReleaseAppInitializer @Inject constructor() : AppInitializer {
+    override fun invoke() { }
+}
