@@ -7,15 +7,18 @@ import androidx.compose.ui.unit.dp
 import androidx.compose.ui.viewinterop.AndroidView
 import androidx.mediarouter.app.MediaRouteButton
 import com.google.android.gms.cast.framework.CastButtonFactory
+import gizz.tapes.util.CastAvailabilityChecker
 
 @Composable
 fun CastButton() {
-    AndroidView(
-        factory = { context ->
-            MediaRouteButton(context).apply {
-                CastButtonFactory.setUpMediaRouteButton(context, this)
-            }
-        },
-        modifier = Modifier.size(48.dp)
-    )
+    if (CastAvailabilityChecker.isAvailable) {
+        AndroidView(
+            factory = { context ->
+                MediaRouteButton(context).apply {
+                    CastButtonFactory.setUpMediaRouteButton(context, this)
+                }
+            },
+            modifier = Modifier.size(48.dp)
+        )
+    }
 }
